# SearchMaster

./: CMakeLists.txt  README.md  search.cpp
libs/trie/: trie.cpp  trie.hpp
libs/trie_node/: trie_node.cpp  trie_node.hpp
